cmake_minimum_required(VERSION 3.19)
project(sorting)

set(CMAKE_CXX_STANDARD 14)

add_executable(sorting main.cpp ArraySequence.hpp BubbleSort.hpp DynamicArray.hpp ISorter.hpp LinkedList.hpp ListSequence.hpp QuickSort.hpp ShellSort.hpp Time_Test.hpp for_files.hpp test_for_keyboard_data.hpp for_creating_sequences.hpp test_for_ready_data.hpp sequence.hpp time_struct.hpp ShakerSort.hpp time_test_for_dim.hpp InsertSort.hpp MergeSort.hpp for_files_border_cases.hpp visualisation_functions.hpp)